fixed image shift on hover

--- a/wp-content/themes/social-change/sass/site/primary/_posts-and-pages.scss
+++ b/wp-content/themes/social-change/sass/site/primary/_posts-and-pages.scss
@@ -126,8 +126,12 @@
   }
 
   .toggle-buttons {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     margin-bottom: 52px;
 
     div {
@@ -137,6 +141,8 @@
       font-size: 20px;
       margin: 0 15px;
       padding: 0 20px;
+      -webkit-transition: all .3s ease-in-out;
+      -o-transition: all .3s ease-in-out;
       transition: all .3s ease-in-out;
 
       &.active {
@@ -146,6 +152,8 @@
 
       &:hover {
         color: #4f4f4f;
+        -webkit-transition: all .2s ease-in-out;
+        -o-transition: all .2s ease-in-out;
         transition: all .2s ease-in-out;
       }
     }
@@ -259,12 +267,20 @@
       -webkit-transition: opacity .5s ease-in-out;
       -o-transition: opacity .5s ease-in-out;
       transition: opacity .5s ease-in-out;
+      -webkit-transform: rotate(0);
+      -ms-transform: rotate(0);
+          transform: rotate(0);
+      -webkit-backface-visibility: hidden;
 
       &:hover {
         opacity: .75;
         -webkit-transition: opacity .3s ease-in-out;
         -o-transition: opacity .3s ease-in-out;
         transition: opacity .3s ease-in-out;
+        -webkit-transform: rotate(0);
+        -ms-transform: rotate(0);
+            transform: rotate(0);
+        -webkit-backface-visibility: hidden;
       }
     }
   }
